# telebeacon

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
telebeacon/: __init__.py  core.py  notify_telegram.py  telegram_client.py
tests/: conftest.py  test_core.py  test_notify_telegram.py  test_telegram_client.py
